--- a/webpages/teacher_dashboard/teacher_dashboard.html
+++ b/webpages/teacher_dashboard/teacher_dashboard.html
@@ -5,63 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
     <link rel="stylesheet" href="teacher_dashboard.css">
-    <link rel="stylesheet" href="../../menu.css">
-    <link rel="stylesheet" href="../../tables.css">
-    <script defer src = "../../menu.js"></script>
+    <script defer src = "teacher_dashboard.js"></script>
 </head>
 <body>
-    <header class = "header">
-        <button class = "hamburger">
-            <div class = "navbar"></div>
+    <header class="TD_header">
+        <button class="TD_hamburger">
+            <div class="TD_navbar"></div>
         </button>
-        <button class = "logOut">Log Out</button>
+        <button class="TD_logOut">Log Out</button>
     </header>
 
-    <nav class = "navigation">
-        <a class = "dashboard" href = "../teacher_dashboard/teacher_dashboard.html">Dashboard</a>
-        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
+    <nav class="TD_navigation">
+        <a class="TD_dashboard" href = "../teacher_dashboard/teacher_dashboard.html">Dashboard</a>
+        <a class="TD_aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
 
-    <section class = "mainPage">
-        <section class = "profile panel">
-            <img class = "profilePic" src = "images/temp.png" alt="Your Profile Pic">
-            <div class = "profileText">
-                <div class = "name">John Doe</div>
-                <div class = "designation">Assistant Professor</div>
-                <div class = "department">Department of CSE</div>
+    <section class="TD_mainPage">
+        <section class="TD_profile">
+            <img class="TD_profilePic" src = "temp.png" alt="Your Profile Pic">
+            <div class="TD_profileText">
+                <div class="TD_name">John Doe</div>
+                <div class="TD_designation">Assistant Professor</div>
+                <div class="TD_department">Department of CSE</div>
             </div>
         </section>
         
-        <section class = "table panel">
-            <div class = "heading">
-                <span class = "code" >Code</span>
-                <span class = "subject">Subject Name</span>
-                <span class = "semester">Sem</span>
-                <!-- <span class = "section">Sec.</span> -->
+        <section class="TD_table">
+            <div class="TD_heading">
+                <span class="TD_code" >Code</span>
+                <span class="TD_subject">Subject Name</span>
+                <span class="TD_semester">Sem</span>
+                <!-- <span class="TD_section">Sec.</span> -->
             </div>
-            <a class = "entry" href = "../lecture_list/lecture_list.html">
-                <span class = "code">HSP101</span>
-                <span class = "subject">Communication Skills</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">A</span> -->
+            <a class="TD_entry" href = "../lecture_list/lecture_list.html">
+                <span class="TD_code">HSP101</span>
+                <span class="TD_subject">Communication Skills</span>
+                <span class="TD_semester">1</span>
+                <!-- <span class="TD_section">A</span> -->
             </a>
-            <a class = "entry" href = "../lecture_list/lecture_list.html">
-                <span class = "code">CST102</span>
-                <span class = "subject">Data Structure and Algorithms</span>
-                <span class = "semester">2</span>
-                <!-- <span class = "section">B</span> -->
+            <a class="TD_entry" href = "../lecture_list/lecture_list.html">
+                <span class="TD_code">CST102</span>
+                <span class="TD_subject">Data Structure and Algorithms</span>
+                <span class="TD_semester">2</span>
+                <!-- <span class="TD_section">B</span> -->
             </a>
-            <a class = "entry" href = "../lecture_list/lecture_list.html">
-                <span class = "code">ECT103</span>
-                <span class = "subject">Circuit Theory</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">C</span> -->
+            <a class="TD_entry" href = "../lecture_list/lecture_list.html">
+                <span class="TD_code">ECT103</span>
+                <span class="TD_subject">Circuit Theory</span>
+                <span class="TD_semester">1</span>
+                <!-- <span class="TD_section">C</span> -->
             </a>
-            <a class = "entry" href = "../lecture_list/lecture_list.html">
-                <span class = "code">ECT101</span>
-                <span class = "subject">Digital Design</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">A</span> -->
+            <a class="TD_entry" href = "../lecture_list/lecture_list.html">
+                <span class="TD_code">ECT101</span>
+                <span class="TD_subject">Digital Design</span>
+                <span class="TD_semester">1</span>
+                <!-- <span class="TD_section">A</span> -->
             </a>
         </section>
     </section>
