--- a/webpages/student_dahboard/student_dashboard.html
+++ b/webpages/student_dahboard/student_dashboard.html
@@ -5,65 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
     <link rel="stylesheet" href="student_dashboard.css">
-    <link rel="stylesheet" href="../../menu.css">
-    <link rel="stylesheet" href="../../tables.css">
-    <script defer src = "../../menu.js"></script>
+    <script defer src = "student_dashboard.js"></script>
 </head>
 <body>
-    <header class = "header">
-        <button class = "hamburger">
-            <div class = "navbar"></div>
+    <header class="SD_header">
+        <button class="SD_hamburger">
+            <div class="SD_navbar"></div>
         </button>
-        <button class = "logOut">Log Out</button>
+        <button class="SD_logOut">Log Out</button>
     </header>
 
-    <nav class = "navigation">
-        <a class = "dashboard" href = "../student_dahboard/student_dashboard.html">Dashboard</a>
-        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
+    <nav class="SD_navigation">
+        <a class="SD_dashboard" href = "../student_dahboard/student_dashboard.html">Dashboard</a>
+        <a class="SD_aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
 
-    <section class = "mainPage">
-        <section class = "profile panel">
-            <img class = "profilePic" src = "images/temp.png" alt="Your Profile Pic">
-            <div class = "profileText">
-                <div class = "name">Sarthak Singh Tariyal</div>
-                <div class = "studentID">2023KUEC2016</div>
-                <div class = "department">CSE</div>
+    <section class="SD_mainPage">
+        <section class="SD_profile panel">
+            <img class="SD_profilePic" src = "temp.png" alt="Your Profile Pic">
+            <div class="SD_profileText">
+                <div class="SD_name">Sarthak Singh Tariyal</div>
+                <div class="SD_studentID">2023KUEC2016</div>
+                <div class="SD_department">CSE</div>
             </div>
         </section>
         
-        <button class = "markAttendance">Mark Attendance</button>
+        <button class="SD_markAttendance">Mark Attendance</button>
         
-        <section class = "table panel">
-            <div class = "heading">
-                <span class = "code" >Code</span>
-                <span class = "subject">Subject Name</span>
-                <span class = "semester">Sem</span>
-                <!-- <span class = "section">Sec.</span> -->
+        <section class="SD_table panel">
+            <div class="SD_heading">
+                <span class="SD_code" >Code</span>
+                <span class="SD_subject">Subject Name</span>
+                <span class="SD_semester">Sem</span>
+                <!-- <span class="SD_section">Sec.</span> -->
             </div>
-            <a class = "entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
-                <span class = "code">HSP101</span>
-                <span class = "subject">Communication Skills</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">A</span> -->
+            <a class="SD_entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
+                <span class="SD_code">HSP101</span>
+                <span class="SD_subject">Communication Skills</span>
+                <span class="SD_semester">1</span>
+                <!-- <span class="SD_section">A</span> -->
             </a>
-            <a class = "entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
-                <span class = "code">CST102</span>
-                <span class = "subject">Data Structure and Algorithms</span>
-                <span class = "semester">2</span>
-                <!-- <span class = "section">B</span> -->
+            <a class="SD_entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
+                <span class="SD_code">CST102</span>
+                <span class="SD_subject">Data Structure and Algorithms</span>
+                <span class="SD_semester">2</span>
+                <!-- <span class="SD_section">B</span> -->
             </a>
-            <a class = "entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
-                <span class = "code">ECT103</span>
-                <span class = "subject">Circuit Theory</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">C</span> -->
+            <a class="SD_entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
+                <span class="SD_code">ECT103</span>
+                <span class="SD_subject">Circuit Theory</span>
+                <span class="SD_semester">1</span>
+                <!-- <span class="SD_section">C</span> -->
             </a>
-            <a class = "entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
-                <span class = "code">ECT101</span>
-                <span class = "subject">Digital Design</span>
-                <span class = "semester">1</span>
-                <!-- <span class = "section">A</span> -->
+            <a class="SD_entry" href = "../lecture_attendance_STUDENT/lecAttendStudent.html">
+                <span class="SD_code">ECT101</span>
+                <span class="SD_subject">Digital Design</span>
+                <span class="SD_semester">1</span>
+                <!-- <span class="SD_section">A</span> -->
             </a>
         </section>
     </section>
